# palladin-agent

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASING.md  SECURITY.md  deny.toml  package-lock.json  package.json  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/codex/: cross-chunk-review.md  pr-review.md  review-output.schema.json
.github/workflows/: client-compatibility-gate.yml  codex-pr-review.yml  dependency-review.yml  fix-pr.yml  macos-signed-runtime.yml  npm-bootstrap.yml  platform-lifecycle.yml  pr-review.yml  release-finalize.yml  release-meta.yml  release-platforms.yml  rust-runtime.yml  secure-storage-spike.yml  test.yml  version-policy-maintenance.yml  version-policy-verify.yml  windows-signed-runtime.yml
docs/ci/: pr-reviewers.md
packaging/linux/: README.md
packaging/macos/: Info.plist.in  PalladinRuntime.entitlements.in  README.md
packaging/npm/: assemble-version-policy-envelope.mjs  configure-version-policy-build.mjs  create-version-policy-incident-plan.mjs  generate-release-manifest.mjs  generate-version-policy-ci-fixture.mjs  generate-version-policy-ci-key.mjs  generate-version-policy-release.mjs  legacy-keyring-interop.mjs  release-manifest-policy.mjs  release-policy.mjs  release-scripts.security.mjs  renew-version-policy.mjs  run-bounded.mjs  stage-bootstrap-packages.mjs  stage-meta-package.mjs  verify-kms-public-key.mjs  verify-platform-package.mjs  verify-platform-release-set.mjs  verify-release-manifest.mjs  verify-version-policy-build.mjs  verify-version-policy-registry.mjs  version-policy-object-name.mjs
packaging/windows/: README.md
runtime/: Cargo.toml  README.md
runtime/contracts/dotnet/Palladin.ContractGate/: Palladin.ContractGate.csproj  Program.cs  SemanticVectors.cs  packages.lock.json
runtime/contracts/v1/: SOURCE.sha256  cli.json  credential-blobs.json  encrypted-envelope.json  grant-access.json  mcp-tools.json  request-signing.json  source-manifest.json
runtime/crates/palladin-api/: Cargo.toml
runtime/crates/palladin-api/src/: client.rs  lib.rs  types.rs
runtime/crates/palladin-cli/: Cargo.toml
runtime/crates/palladin-cli/src/: args.rs  lib.rs  main.rs  output.rs
runtime/crates/palladin-cli/tests/: cli_contract.rs  doctor.rs  legacy_typescript_e2e.rs  profile_service.rs  shell_contract.rs
runtime/crates/palladin-core/: Cargo.toml
runtime/crates/palladin-core/src/: environment.rs  host.rs  legacy_typescript.rs  lib.rs  panic.rs  profiles.rs  public_store.rs  secret.rs  terminal.rs
runtime/crates/palladin-credential/: Cargo.toml
runtime/crates/palladin-credential/src/: access.rs  fields.rs  lib.rs  secret.rs  totp.rs  wait.rs
runtime/crates/palladin-credential/tests/: contract_vectors.rs
runtime/crates/palladin-crypto/: Cargo.toml
runtime/crates/palladin-crypto/src/: envelope.rs  identity.rs  lib.rs  signing.rs
runtime/crates/palladin-crypto/tests/: contract_vectors.rs
runtime/crates/palladin-exec/: Cargo.toml
runtime/crates/palladin-exec/src/: lib.rs
runtime/crates/palladin-linux-broker/: Cargo.toml  build.rs
runtime/crates/palladin-linux-broker/examples/: package_state_fixture.rs
runtime/crates/palladin-linux-broker/src/: client.rs  lib.rs  peer.rs  protocol.rs  purge.rs  store.rs
runtime/crates/palladin-linux-executor/: Cargo.toml
runtime/crates/palladin-linux-executor/src/: lib.rs
runtime/crates/palladin-mcp/: Cargo.toml
runtime/crates/palladin-mcp/src/: lib.rs  tests.rs
runtime/crates/palladin-platform/: Cargo.toml
runtime/crates/palladin-platform/src/: broker_protocol.rs  legacy_typescript_store.rs  lib.rs  macos_hardened_store.rs  macos_lifecycle.rs  macos_local_authentication.rs  secure_store.rs
runtime/crates/palladin-runtime/: Cargo.toml  build.rs
runtime/crates/palladin-runtime/src/: integrity.rs  lib.rs  version_policy.rs
runtime/crates/palladin-windows-broker/: Cargo.toml
runtime/crates/palladin-windows-broker/src/: companion.rs  lib.rs  windows.rs  windows_store.rs
runtime/crates/palladin-windows-executor/: Cargo.toml
runtime/crates/palladin-windows-executor/src/: lib.rs  windows.rs
runtime/docs/adr/: 0002-exec-process-boundary.md  0003-browser-injection-boundary.md  0004-adversarial-local-boundary-evidence.md
runtime/fixtures/legacy-typescript/v1/multi-profile/.palladin/: registry.json
runtime/fixtures/legacy-typescript/v1/multi-profile/.palladin/agents/Default/: agent.key  config.json  signing.key
security/adversarial/: coverage-manifest.json  operator-approval.mjs  report.mjs  verify-release-artifacts.mjs
security/lifecycle/: aggregate-shards.mjs  coverage-manifest.json  operator-approval.mjs  report.mjs  run-physical-target.mjs  shards.mjs  verify-release-artifacts.mjs  write-run-contract.mjs
spikes/secure-storage/: README.md
src/commands/: agents.ts  connect.ts  credentials.ts  get.ts  init.ts  inject-failures.ts  inject.ts  list.ts  security.ts  status.ts
src/config/: config.ts  paths.ts  registry.ts
src/credential/: access.ts  await-grant.ts  duration.ts  exit-codes.ts  fields.ts  totp.ts  wait-options.ts
src/crypto/: decrypt.ts  keypair.ts  secret.ts  secure-storage.ts  signing.ts
src/exec/: run-exec.ts  run-script.ts  script-refs.ts
src/http/: agent-api.ts  agent-context.ts  client.ts
src/inject/: failure-report.ts  field-detection.ts  inject-runner.ts  origin-check.ts  outcome.ts
src/mcp/: server.ts  tools.ts
src/runtime/: native-dispatch.ts  version-policy-build.ts  version-policy.ts  windows-runtime-cache.ts
tests/commands/: inject-boundary.test.ts
tests/config/: registry.test.ts
tests/contracts/: credential-runtime-vectors.test.ts  native-runtime-vectors.test.ts
tests/credential/: await-grant.test.ts  duration.test.ts  fields.test.ts  totp.test.ts  wait-options.test.ts
tests/crypto/: decrypt.test.ts  keypair.test.ts  secret.test.ts  secure-storage.test.ts  signing-storage.test.ts  signing.test.ts
tests/exec/: run-exec.test.ts  run-script.test.ts  script-refs.test.ts
tests/helpers/: sensitive-assert.ts
tests/http/: agent-api.test.ts  client-signing.test.ts  (+4 more)
(+113 files in other folders)
