[workspace]
members = [
    "crates/palladin-cli",
    "crates/palladin-core",
    "crates/palladin-platform",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/Palladin-io/palladin-agent"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
nix = { version = "0.31.3", default-features = false, features = ["user"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
url = "2.5.8"
zeroize = { version = "1.9.0", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
