[workspace]
members = [
    "crates/palladin-api",
    "crates/palladin-cli",
    "crates/palladin-core",
    "crates/palladin-crypto",
    "crates/palladin-platform",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/Palladin-io/palladin-agent"

[workspace.dependencies]
base64 = "0.22.1"
blake2 = "0.10.6"
clap = { version = "4.6.1", features = ["derive"] }
crypto_secretbox = "0.1.1"
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom = "0.4.3"
nix = { version = "0.31.3", default-features = false, features = ["user"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
salsa20 = "0.10.2"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
url = "2.5.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.9.0", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
