[workspace]
members = [
    "crates/palladin-api",
    "crates/palladin-cli",
    "crates/palladin-core",
    "crates/palladin-credential",
    "crates/palladin-crypto",
    "crates/palladin-exec",
    "crates/palladin-linux-broker",
    "crates/palladin-linux-executor",
    "crates/palladin-mcp",
    "crates/palladin-platform",
    "crates/palladin-runtime",
    "crates/palladin-windows-broker",
    "crates/palladin-windows-executor",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/Palladin-io/palladin-agent"

[workspace.dependencies]
base64 = "0.22.1"
blake2 = "0.10.6"
clap = { version = "4.6.1", features = ["derive"] }
command-group = { version = "5.0.1", features = ["with-tokio"] }
crypto_secretbox = "0.1.1"
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
fs2 = "0.4.3"
getrandom = "0.4.3"
hostname = "0.4.1"
hmac = "0.12.1"
keyring = "4.1.4"
libc = "0.2.180"
nix = { version = "0.31.3", default-features = false, features = ["process", "socket", "user"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rsa = "0.9.10"
rpassword = "7.5.4"
rmcp = { version = "2.2.0", default-features = false, features = ["server", "transport-async-rw"] }
salsa20 = "0.10.2"
secrecy = "0.10.3"
security-framework = { version = "3.7.0", features = ["OSX_10_15"] }
security-framework-sys = "2.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.10.6"
sha2 = { version = "0.10.9", features = ["oid"] }
subtle = "2.6.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
tracing = { version = "0.1.44", features = ["max_level_off", "release_max_level_off"] }
url = "2.5.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.9.0", features = ["derive"] }
windows = "0.62.2"
windows-service = "0.8.0"

[workspace.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_Isolation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_UI_Shell",
]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true
