[package]
name = "palladin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
palladin-core = { path = "../palladin-core" }
palladin-crypto = { path = "../palladin-crypto" }
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
secrecy.workspace = true
