[package]
name = "palladin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "palladin"
path = "src/main.rs"

[dependencies]
base64.workspace = true
clap.workspace = true
getrandom.workspace = true
hostname.workspace = true
palladin-api = { path = "../palladin-api" }
palladin-core = { path = "../palladin-core" }
palladin-crypto = { path = "../palladin-crypto" }
palladin-platform = { path = "../palladin-platform" }
rpassword.workspace = true
secrecy.workspace = true
subtle.workspace = true
time.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
