[package]
name = "palladin-credential"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hmac.workspace = true
palladin-api = { path = "../palladin-api" }
palladin-core = { path = "../palladin-core" }
percent-encoding.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
zeroize.workspace = true
