[package]
name = "palladin-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
blake2.workspace = true
crypto_secretbox.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
salsa20.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex = "0.4.3"
serde_json.workspace = true
