[package]
name = "palladin-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(windows)'.dependencies]
directories.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dependencies]
keyring.workspace = true
secrecy.workspace = true
thiserror.workspace = true
