[package]
name = "palladin-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
macos-hardened = []

[target.'cfg(windows)'.dependencies]
directories.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
security-framework-sys.workspace = true

[dependencies]
keyring.workspace = true
secrecy.workspace = true
thiserror.workspace = true
