[package]
name = "palladin-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
macos-hardened = []

[target.'cfg(windows)'.dependencies]
directories.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring-core.workspace = true
linux-keyutils-keyring-store.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
objc2-local-authentication.workspace = true
security-framework.workspace = true
security-framework-sys.workspace = true

[dependencies]
getrandom.workspace = true
hmac.workspace = true
keyring.workspace = true
rsa.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
zeroize.workspace = true
