[package]
name = "palladin-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
getrandom.workspace = true
palladin-api = { path = "../palladin-api" }
palladin-core = { path = "../palladin-core" }
palladin-credential = { path = "../palladin-credential" }
palladin-crypto = { path = "../palladin-crypto" }
palladin-exec = { path = "../palladin-exec" }
palladin-platform = { path = "../palladin-platform" }
secrecy.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
