[package]
name = "palladin-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
local-development = ["palladin-core/local-development"]

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
libc.workspace = true
nix.workspace = true
palladin-api = { path = "../palladin-api" }
palladin-core = { path = "../palladin-core" }
palladin-credential = { path = "../palladin-credential" }
palladin-crypto = { path = "../palladin-crypto" }
palladin-exec = { path = "../palladin-exec" }
palladin-platform = { path = "../palladin-platform" }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
base64.workspace = true
